--- a/manifest.json
+++ b/manifest.json
@@ -18,14 +18,14 @@
     "action": {
         "default_popup": "popup.html",
         "default_icon": {
-            "16": "logo.ico",
-            "48": "logo.ico",
-            "128": "logo.ico"
+            "16": "logo.png",
+            "48": "logo.png",
+            "128": "logo.png"
         }
     },
     "icons": {
-        "16": "logo.ico",
-        "48": "logo.ico",
-        "128": "logo.ico"
+        "16": "logo.png",
+        "48": "logo.png",
+        "128": "logo.png"
     }
 }
